# nCr-cipher

./: LICENSE  README.md  __init__.py  cli.py  core.py  gui.py  pyproject.toml  test_core.py
.github/workflows/: publish.yml
